fix: align tooltip arrow with info icon and ensure it touches tooltip

--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -217,7 +217,7 @@ button[style*="background: #2a2a44"]:hover:not([disabled]) { background: #3a3a54
   content: '';
   position: absolute;
   top: -16px;
-  right: 16px;
+  right: 20px;
   width: 0;
   height: 0;
   border-left: 7px solid transparent;
@@ -232,7 +232,7 @@ button[style*="background: #2a2a44"]:hover:not([disabled]) { background: #3a3a54
   content: '';
   position: absolute;
   top: -14px;
-  right: 17px;
+  right: 21px;
   width: 0;
   height: 0;
   border-left: 6px solid transparent;
